--- a/services/web-client/docker/docker-compose.init.yml
+++ b/services/web-client/docker/docker-compose.init.yml
@@ -2,6 +2,7 @@
 #
 # Usage:  docker-compose -f docker-compose.yml -f docker-compose.init.yml run qx
 #
+version: '3'
 services:
   qx:
     entrypoint: /bin/bash
