Simplified and moved  director Dockerfile

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3'
 services:
   director:
     build:
-      context: .
-      dockerfile: _dockerfiles/director/Dockerfile
+      context: director
     ports:
       - '8001:8001'
     environment:
