--- a/services/docker-compose.dev.yml
+++ b/services/docker-compose.dev.yml
@@ -2,14 +2,14 @@ version: '3'
 services:
   director-dev:
     build:
-      context: .
-      dockerfile: _dockerfiles/director/Dockerfile-dev
+      context: director
     ports:
       - '8001:8001'
     environment:
     # on Windows follow http://www.computerperformance.co.uk/powershell/powershell_profile_ps1.htm
     # currently needs to set $Env:COMPOSE_CONVERT_WINDOWS_PATHS=1 in powershell to make this works
     # on a windows machine
+      - FLASK_DEBUG=1
       - REGISTRY_URL=masu.speag.com
       - REGISTRY_AUTH=True
       - REGISTRY_USER=z43
