director: reduced image size by using an alpine parent. Added gunicorn server for production

--- a/services/director/Dockerfile
+++ b/services/director/Dockerfile
@@ -1,14 +1,16 @@
-FROM continuumio/miniconda3
-# TODO: see if can reduce to python:3.6-alpine
+FROM python:3.6-alpine
 
 LABEL maintainer="Sylvain Anderegg"
 
-# TODO: user requirements.txt instead
-RUN conda update conda
-RUN conda install flask
-RUN pip install docker
+RUN adduser -D app
 
-ENV FLASK_APP=director.py
+WORKDIR /home/app
+
+COPY requirements.txt requirements.txt
+RUN python -m venv venv
+RUN venv/bin/pip install -r requirements.txt
+RUN venv/bin/pip install gunicorn==19.8.0
+
 # TODO: does these environment variables are necessary here?
 ENV REGISTRY_AUTH = ''
 ENV REGISTRY_USER = ''
@@ -16,12 +18,19 @@ ENV REGISTRY_PW = ''
 ENV REGISTRY_URL = ''
 ENV LOCAL_MODE='True'
 
-# TODO: in dev mode this is mounted
-COPY . /home/app
+ENV FLASK_APP=director.py
 
-WORKDIR /home/app
+# TODO: in dev mode this is instead mounted from host
+COPY . /home/app
+RUN chmod +x boot.sh
+RUN chown -R app:app ./
+
+USER app
+
 VOLUME /var/run/docker.sock
 EXPOSE 8001
 
-# TODO: warning this is a development server! uuse unicorn instead!
-ENTRYPOINT [ "flask", "run", "--host=0.0.0.0", "--port=8001"]
+ENTRYPOINT ["./boot.sh"]
+
+# TODO: warning this is a development server! use unicorn instead!
+# CMD [ "flask", "run", "--host=0.0.0.0", "--port=8001"]
