--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
     "lintJsServices": "eslint ./services",
-    "lintPyServices": "pylint ./services"
+    "lintPyServices": "find . -iname '*.py' | xargs pylint"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
     "babel-eslint": "^8.2.3",
     "eslint-config-qx": "^0.1.0",
     "eslint-plugin-qx-rules": "^0.1.0"
