--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lintJsServices": "eslint ./services",
-    "lintPyServices": "pylint services/web-server/async_sio.py"
+    "lintPyServices": "pylint --rcfile=.pylintrc -output-format=colorized services/web-server/server.py"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
