--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lintJsServices": "eslint ./services",
-    "lintPyServices": "pylint --rcfile=.pylintrc --output-format=colorized services/web-server/server.py"
+    "lintPyServices": "find services -iname '*.py' | xargs pylint --rcfile=.pylintrc --disable=import-error --disable=fixme"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
