--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -16,13 +16,15 @@ services:
       - REGISTRY_PW=z43
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
+  #--------------------------------------------------------------------
   webserver:
     build:
       context: .
-      dockerfile: _dockerfiles/qxapp/python/Dockerfile
+      dockerfile: web-server/Dockerfile
+      target: production
       args:
-        serverdir: web-server
-        web_outdir: /usr/src/app/client
+        client_dir: web-client
+        server_dir: web-server
     ports:
       - '9081:8080'
     environment:
