--- a/services/docker-compose.dev.yml
+++ b/services/docker-compose.dev.yml
@@ -1,32 +1,36 @@
 version: '3.4'
 services:
   director:
+    image: services_director:dev
     build:
       target: development
     volumes:
       - './director:/home/app'
-  build-qx-dev:
+  #--------------------------------------------------------------------
+  webserver:
+    image: services_webserver:dev
     build:
-      context: .
-      dockerfile: _dockerfiles/build-qx/Dockerfile
-    volumes:
-      - './web-client:/home/node/qxapp'
-  webserver-dev:
-    build:
-      context: .
-      dockerfile: _dockerfiles/qxapp/python/Dockerfile-dev
-      args:
-        serverdir: web-server
-    env_file: .env
+      target: development
     ports:
+      - '9080:8080'
       - '9081:9081'
       - '9082:9082'
     environment:
       - DIRECTOR_HOST=http://director-dev
       - DIRECTOR_PORT=8001
+      - SIMCORE_WEB_CONFIG=development
       - SIMCORE_WEB_PORT=9081
     volumes:
       - './web-server:/usr/src/app'
       - './web-client/source-output:/usr/src/app/client'
     depends_on:
-      - build-qx-dev
+      - build-qx
+  #--------------------------------------------------------------------
+  build-qx:
+    image: itisfoundation/qooxdoo-compiler:latest
+    volumes:
+      - './web-client:/home/node/src'
+    ports:
+      - '8080:8080'
+    working_dir: /home/node/src
+    command: compile
