Removed last dockerfile and integrated build-qx service into dev server

--- a/services/docker-compose.dev.yml
+++ b/services/docker-compose.dev.yml
@@ -33,4 +33,5 @@ services:
     ports:
       - '8080:8080'
     working_dir: /home/node/src
-    command: compile
+    entrypoint: /bin/bash
+    command: -c "qx contrib update && qx contrib list && qx contrib install ITISFoundation/qx-osparc-theme && qx compile --watch"
