--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -1,3 +1,4 @@
+# USAGE:  docker-compose -f docker-compose.yml -f docker-compose.debug.yml ...
 version: '3.4'
 services:
   director:
@@ -16,7 +17,7 @@ services:
       - '9081:9081'
       - '9082:9082'
     environment:
-      - DIRECTOR_HOST=http://director-dev
+      - DIRECTOR_HOST=director-dev
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=development
       - SIMCORE_WEB_PORT=9081
