--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -28,6 +28,6 @@ services:
     ports:
       - '9081:8080'
     environment:
-      - DIRECTOR_HOST=http://director
+      - DIRECTOR_HOST=director
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=production
