--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "lintJsServices": "eslint ./services",
-    "lintPyServices": "find services -iname '*.py' | xargs pylint --rcfile=.pylintrc --disable=import-error --disable=fixme"
+    "linter": "eslint ./services"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
