--- a/services/web-server/Dockerfile
+++ b/services/web-server/Dockerfile
@@ -1,5 +1,5 @@
-#FIXME: FROM itisfoundation/qooxdoo-compiler:latest as qx-stage
 FROM node:8.9.2 as qx-stage
+#FIXME: FROM itisfoundation/qooxdoo-compiler:latest as qx-stage
 
 ARG client_dir=web-client
 
@@ -30,55 +30,69 @@ RUN qx contrib update && qx contrib list
 RUN qx contrib install ITISFoundation/qx-osparc-theme
 RUN qx compile
 
-# -------------------------------------------------------------
-# TODO: use python:3.6-alpine
-FROM python:3 as common-py-stage
+# -------------------------common-py-stage------------------------------------
+FROM python:3.6-alpine as common-py-stage
+
+#
+# + /usr/src
+#    + /requirements
+#    + /test
+#    + /source        <-- web-server/source (pwd)
+#        + /client    <-- web-client/source-output
+
+# TODO: create non-root user
 
 ARG server_dir=web-server
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/source
 
-ENV SIMCORE_WEB_OUTDIR=/usr/src/app/client
-ENV SIMCORE_WEB_HOSTNAME='0.0.0.0'
-ENV SIMCORE_WEB_PORT=8080
-ENV DIRECTOR_HOST='http://director'
+ENV SIMCORE_WEB_OUTDIR=$PWD/client
+ENV DIRECTOR_HOST='director'
 ENV DIRECTOR_PORT=8001
 
-# client
-COPY --from=qx-stage /home/node/src/source-output client
+# client compiled code
+COPY --from=qx-stage /home/node/src/source-output ${SIMCORE_WEB_OUTDIR}
 
 # packages
-COPY $server_dir/requirements/common.txt requirements/common.txt
-RUN pip3 install --no-cache-dir -r requirements/common.txt
-
-RUN python --version \
- && pip list --format=columns
+COPY $server_dir/requirements/common.txt /usr/src/requirements/common.txt
+RUN pip3 install --no-cache-dir -r /usr/src/requirements/common.txt
 
 EXPOSE 8080
 
-# -------------------------------------------------------------
+
+
+# ----------------------------development---------------------------------
 FROM common-py-stage as development
 
 ARG server_dir=web-server
 
-COPY $server_dir/requirements/dev.txt requirements/dev.txt
-RUN pip3 install --no-cache-dir -r requirements/dev.txt
+COPY $server_dir/requirements/dev.txt /usr/src/requirements/dev.txt
+RUN pip3 install --no-cache-dir -r /usr/src/requirements/dev.txt \
+  && python --version \
+  && pip list --format=columns \
+  && echo \
+  && ls -l $PWD
 
-EXPOSE 9081
-EXPOSE 9082
+#EXPOSE 9082
 
-CMD ["python", "-m", "aiohttp.web -H ${SIMCORE_WEB_HOSTNAME} -P ${SIMCORE_WEB_PORT} server:create_app"]
+CMD ["python", "-m", "aiohttp.web", "-H", "0.0.0.0", "-P", "8080", "server:create_app"]
 
 
-# -------------------------------------------------------------
+
+# -----------------------------production--------------------------------
 FROM common-py-stage as production
 
 ARG server_dir=web-server
 
-COPY $server_dir/requirements/prod.txt requirements/prod.txt
-RUN pip3 install --no-cache-dir -r requirements/prod.txt
+COPY $server_dir/requirements/prod.txt /usr/src/requirements/prod.txt
+RUN pip3 install --no-cache-dir -r /usr/src/requirements/prod.txt
 
-COPY $server_dir/source ./
+COPY $server_dir/source ./source
+
+RUN python --version \
+  && pip list --format=columns \
+  && echo \
+  && ls -l $PWD
 
 # TODO: why not directly python?
-ENTRYPOINT ["sh", "-c", "python -m aiohttp.web -H ${SIMCORE_WEB_HOSTNAME} -P ${SIMCORE_WEB_PORT} server:create_app"]
+ENTRYPOINT ["sh", "-c", "python -m aiohttp.web -H 0.0.0.0 -P 8080 server:create_app"]
