--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -20,9 +20,9 @@ services:
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=development
     volumes:
-      - './web-server/source:/usr/src/source'
-      - './web-client/source-output:/usr/src/source/client'
-      - './web-server/test:/usr/src/test'
+      - './web/server/source:/usr/src/source'
+      - './web/client/source-output:/usr/src/source/client'
+      - './web/server/test:/usr/src/test'
       # TODO: do test go in production or development or debug??
     #depends_on:
     #  - build-qx
@@ -30,7 +30,7 @@ services:
   build-qx:
     image: itisfoundation/qooxdoo-compiler:latest
     volumes:
-      - './web-client:/home/node/src'
+      - './web/client:/home/node/src'
     ports:
       - '8080:8080'
     working_dir: /home/node/src
