--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -20,11 +20,11 @@ services:
   webserver:
     build:
       context: .
-      dockerfile: web-server/Dockerfile
+      dockerfile: web/server/Dockerfile
       target: production
       args:
-        client_dir: web-client
-        server_dir: web-server
+        client_dir: web/client
+        server_dir: web/server
     ports:
       - '9081:8080'
     environment:
