add odeis python updates

--- a/services/package.json
+++ b/services/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lintJsServices": "eslint ./web-client/source/class/**/*.js",
-    "lintPyServices": "pylint .",
+    "lintPyServices": "find . -name '*.py' | xargs pylint --rcfile=.pylintrc --disable=import-error --disable=fixme",
     "buildQxApp": "cd ./web-client && qx compile --target=source",
     "installQxContrib": "cd ./web-client && qx contrib update && qx contrib list && qx contrib install ITISFoundation/qx-osparc-theme"
   },
