--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -6,7 +6,7 @@ services:
     build:
       target: development
     volumes:
-      - './director/source:/home/app'
+      - './director/source:/home/app/source'
   #--------------------------------------------------------------------
   webserver:
     image: services_webserver:dev
