--- a/services/docker-compose.debug.yml
+++ b/services/docker-compose.debug.yml
@@ -16,7 +16,7 @@ services:
       - '9081:8080'
       #- '9082:9082'
     environment:
-      - DIRECTOR_HOST=director-dev
+      - DIRECTOR_HOST=director
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=development
     volumes:
