--- a/services/director/Dockerfile
+++ b/services/director/Dockerfile
@@ -1,43 +1,62 @@
 FROM python:3.6-alpine as common
 
-LABEL maintainer="Sylvain Anderegg"
+LABEL maintainer="sanderegg"
 
-RUN adduser -D app
+RUN addgroup docker && addgroup user \
+  && adduser -D app \
+  && addgroup app app && addgroup app docker
 
-WORKDIR /home/app
+USER app
 
-COPY requirements.txt requirements.txt
-RUN python -m venv venv
-RUN venv/bin/pip install -r requirements.txt
-RUN venv/bin/pip install gunicorn==19.8.0
-
-# TODO: does these environment variables are necessary here?
 ENV REGISTRY_AUTH = ''
 ENV REGISTRY_USER = ''
 ENV REGISTRY_PW = ''
 ENV REGISTRY_URL = ''
-
+ENV PYTHONPATH=/home/app/source
 ENV FLASK_APP=director.py
+ENV FLASK_DEBUG=0
 
+WORKDIR /home/app
+
+# + /home/app/            $HOME, $WORKDIR,
+#    + test/
+#    + source/            $PYTHONPATH
+#    + requirements.txt
+#    + boot.sh
+
+COPY --chown=app:app requirements.txt requirements.txt
 COPY --chown=app:app boot.sh boot.sh
+
 RUN chmod +x boot.sh
-#RUN usermod -a -G docker $USER
-USER app
-VOLUME /var/run/docker.sock
+
+RUN python -m venv venv \
+  && chown -R app:app venv
+
+RUN venv/bin/pip install --upgrade pip \
+ && venv/bin/pip install -r requirements.txt
+
+# FIXME: fails when docker-compose run in production !?
+# VOLUME /var/run/docker.sock
 EXPOSE 8001
 
-# Development stage ---------------
+# --------------------------Development stage -------------------
 FROM common as development
 
 ENV FLASK_DEBUG=1
 
 VOLUME /home/app/source
-WORKDIR /home/app/source
-CMD ["sh", "../boot.sh"]
 
-# Production stage -------------------
+CMD ["/bin/sh", "./boot.sh"]
+
+# --------------------------Production stage -------------------
 FROM common as production
 
-COPY --chown=app:app ./source /home/app/source
+RUN venv/bin/pip install gunicorn==19.8.0
 
-ENTRYPOINT ["sh", "./boot.sh"]
+# TODO: set non-root id
+COPY --chown=1000:docker source source
+
+# FIXME: this is the only way to get access to docker sockets !?
+USER root
+
+ENTRYPOINT ["/bin/sh", "./boot.sh"]
