--- a/.vscode-template/settings.json
+++ b/.vscode-template/settings.json
@@ -14,4 +14,7 @@
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
     "eslint.alwaysShowStatus": true,
+    "python.formatting.autopep8Args": [
+        "-max-line-length", "140"
+    ]
 }
