WIP webserver: fixing connection to director. Starts but stills does not connect to the correct port.

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -31,3 +31,4 @@ services:
       - DIRECTOR_HOST=director
       - DIRECTOR_PORT=8001
       - SIMCORE_WEB_CONFIG=production
+    #command: ["python", "server.py"]
