Moved docker with qx to the service/web/client folder

--- a/services/web/client/Dockerfile
+++ b/services/web/client/Dockerfile
@@ -8,19 +8,19 @@ ENV NPM_CONFIG_LOGLEVEL warn
 WORKDIR /home/node/
 
 # https://www.npmjs.com/package/qxcompiler
-COPY _dockerfiles/build-qx/package*.json ./
+COPY package*.json ./
 
-ENV PATH="/home/node/qxapp/qooxdoo-sdk/tool/bin:/home/node/node_modules/.bin/:${PATH}"
+ENV PATH="/home/node/qooxdoo-sdk/tool/bin:/home/node/node_modules/.bin/:${PATH}"
 
 RUN npm i npm@latest && \
   npm install && \
   git clone --depth 1 https://github.com/qooxdoo/qooxdoo.git qooxdoo-sdk
 
 
-VOLUME /home/node/qxapp
-WORKDIR /home/node/qxapp
-# Add dark theme to web-client
+VOLUME /home/node/src
+WORKDIR /home/node/src
 
+# Add dark theme to web-client
 ENTRYPOINT qx contrib update && \
            qx contrib list && \
            qx contrib install ITISFoundation/qx-osparc-theme && \
