--- a/services/web/client/docker-compose.yml
+++ b/services/web/client/docker-compose.yml
@@ -12,3 +12,9 @@ services:
     ports:
       - '8080:8080'
     working_dir: /home/node/client
+  qx-prod:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: production
+    command: echo qx-prod built and ready to use
