- client eslint extended - coding conventions file added

--- a/services/web/client/.eslintrc.json
+++ b/services/web/client/.eslintrc.json
@@ -8,5 +8,20 @@
     "q": false,
     "qxWeb": false,
     "qxapp": false
+  },
+  "rules": {
+    "camelcase": [
+      "error",
+      {
+        "properties": "always"
+      }
+    ],
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allowAfterThis": true,
+        "enforceInMethodNames": true
+      }
+    ]
   }
 }
