--- a/services/web/client/scripts/.env
+++ b/services/web/client/scripts/.env
@@ -1,3 +1,3 @@
-export SCRIPT_DIR=$(realpath ./scripts/)
-export CLIENT_DIR=$(realpath ./)
+export SCRIPT_DIR=$(pwd)/scripts/
+export CLIENT_DIR=$(pwd)/
 export FONTS_DIR=${CLIENT_DIR}/source/resource/iconfont/
