change back to qxapp use build target on client for production (almost 2x faster in chrome debugger) fixed production docker

--- a/services/dy-modeling/client/Dockerfile
+++ b/services/dy-modeling/client/Dockerfile
@@ -1,10 +1,5 @@
 FROM node:8.9.2 AS common
-
-LABEL maintainer=pcrespov
-
 ENV NPM_CONFIG_LOGLEVEL warn
-
-
 # + /home/node/
 #    + app/source-output/
 #    + app/source/
@@ -15,8 +10,7 @@ RUN npm install qxcompiler
 
 ENV PATH="/home/node/node_modules/.bin/:${PATH}"
 
-VOLUME /home/node/app
-WORKDIR /home/node/app
+WORKDIR /home/node/qxapp
 
 #-----------------Development-----------------------
 FROM common as development
@@ -26,6 +20,6 @@ CMD ["qx", "compile", "--watch"]
 #-----------------Production----------------------
 FROM common AS production
 
-COPY  --chown=node:node source /home/node/app/source
-COPY --chown=node:node *.json ./
-RUN qx compile
+COPY  source /home/node/qxapp/source
+COPY *.json ./
+RUN qx compile --target=build
