--- a/ancillary/minio/docker-compose.yml
+++ b/ancillary/minio/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 services:
 
   minio01:
-    image: minio/minio:RELEASE.2018-05-11T00-29-24Z
+    image: minio/minio
     volumes:
       - minio01-data:/export
     ports:
@@ -23,7 +23,7 @@ services:
       - access_key
 
   minio02:
-    image: minio/minio:RELEASE.2018-04-12T23-41-09Z
+    image: minio/minio
     volumes:
       - minio02-data:/export
     ports:
@@ -44,7 +44,7 @@ services:
       - access_key
 
   minio03:
-    image: minio/minio:RELEASE.2018-04-12T23-41-09Z
+    image: minio/minio
     volumes:
       - minio03-data:/export
     ports:
@@ -65,7 +65,7 @@ services:
       - access_key
 
   minio04:
-    image: minio/minio:RELEASE.2018-04-12T23-41-09Z
+    image: minio/minio
     volumes:
       - minio04-data:/export
     ports:
