--- a/ops/ansible/roles/dockerhost/tasks/main.yml
+++ b/ops/ansible/roles/dockerhost/tasks/main.yml
@@ -3,7 +3,7 @@
 # Docker host setup
 - name: 'setup docker hosts (ubuntu)'
   import_tasks: ubuntu.yml
-  when: ansible_os_platform|lower == 'ubuntu'
+  when: ansible_distribution|lower == 'ubuntu'
 #- name: 'setup docker hosts (windows)'
 #  import_tasks: windows.yml
 #  when: ansible_os_platform|lower == 'windows'
