--- a/ops/ansible/roles/dockerhost/tasks/main.yml
+++ b/ops/ansible/roles/dockerhost/tasks/main.yml
@@ -2,6 +2,8 @@
 # roles/dockerhost/tasks/main.yml
 # Docker host setup
 - name: 'setup docker hosts (ubuntu)'
+  become: yes
+  become_method: sudo
   import_tasks: ubuntu.yml
   when: ansible_distribution|lower == 'ubuntu'
 #- name: 'setup docker hosts (windows)'
